--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -20,3 +20,27 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
+[compat]
+julia = ">= 1.3"
+Combinatorics = "~1.0.0"
+Coverage = "~1.0.0"
+CuArrays = "~1.5.0"
+DataDeps = "~0.7.1"
+Dierckx = "~0.4.1"
+Distributions = "~0.22.4"
+DocStringExtensions = "~0.8.1"
+DoubleFloats = "~0.9.11"
+FileIO = "~1.2.1"
+ForwardDiff = "~0.10.9"
+GaussQuadrature = "~0.5.0"
+GPUifyLoops = "~0.2.9"
+JLD2 = "~0.1.11"
+LazyArrays = "~0.15.0"
+Literate = "~2.2.1"
+MPI = "~0.11.0"
+NCDatasets = "~0.9.5"
+Requires = "~0.5.2"
+SpecialFunctions = "~0.10.0"
+StaticArrays = "~0.12.1"
+WriteVTK = "~1.4.0"
