--- a/Project.toml
+++ b/Project.toml
@@ -38,6 +38,30 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 
 [compat]
+ArgParse = "1.1"
+CUDAapi = "3.1"
+CUDAdrv = "6.0"
+CUDAnative = "2.10"
+Combinatorics = "1.0"
+Coverage = "1.0"
+CuArrays = "1.7"
+DataDeps = "0.7"
+Distributions = "0.22"
+DocStringExtensions = "0.8"
+DoubleFloats = "1.1"
+FileIO = "1.2"
+ForwardDiff = "0.10"
+GPUifyLoops = "0.2"
+GaussQuadrature = "0.5"
+JLD2 = "0.1"
+LazyArrays = "0.15"
+Literate = "2.2"
+MPI = "0.12"
+NCDatasets = "0.10"
+Requires = "1.0"
+SpecialFunctions = "0.10"
+StaticArrays = "0.12"
+WriteVTK = "1.4"
 julia = ">= 1.3"
 
 [extras]
