--- a/slurmci-test.toml
+++ b/slurmci-test.toml
@@ -12,6 +12,7 @@ cpu = [
 
 cpu_gpu = [
   { file = "test/Arrays/varsindex.jl", slurmargs = ["--ntasks=1"], args = [] },
+  { file = "test/DGmethods/vars_test.jl", slurmargs = ["--ntasks=1"], args = [] },
   { file = "test/DGmethods/Euler/isentropicvortex.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "test/DGmethods/Euler/isentropicvortex_imex.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "test/DGmethods/Euler/isentropicvortex_multirate.jl", slurmargs = ["--ntasks=3"], args = [] },
