--- a/test/suite.toml
+++ b/test/suite.toml
@@ -1,26 +1,3 @@
-[BrickMesh]
-filename = "test/Mesh/BrickMesh.jl"
-
-    [BrickMesh.matrix.CPU]
-    njobs        = 1
-    frequency    = ["continuously"]
-    active_CI    = ["azure"]
-    time_limit   = [""]
-    args         = [""]
-    parallel     = [true]
-    use_mpiexec  = [false]
-    mpiranks     = [3]
-
-    [BrickMesh.matrix.GPU]
-    njobs        = 0
-    frequency    = []
-    active_CI    = []
-    time_limit   = []
-    args         = []
-    parallel     = []
-    use_mpiexec  = []
-    mpiranks     = []
-
 [acousticwave_1d_imex]
 filename = "test/DGmethods/Euler/acousticwave_1d_imex.jl"
 
@@ -481,10 +458,10 @@ filename = "test/DGmethods_old/Euler/isentropic_vortex_standalone.jl"
     use_mpiexec  = [true]
     mpiranks     = [3]
 
-[Geometry]
-filename = "test/Mesh/Geometry.jl"
+[MeshGroup]
+filename = "test/Mesh/MeshGroup.jl"
 
-    [Geometry.matrix.CPU]
+    [MeshGroup.matrix.CPU]
     njobs        = 1
     frequency    = ["continuously"]
     active_CI    = ["azure"]
@@ -492,9 +469,9 @@ filename = "test/Mesh/Geometry.jl"
     args         = [""]
     parallel     = [true]
     use_mpiexec  = [false]
-    mpiranks     = [3]
+    mpiranks     = [1]
 
-    [Geometry.matrix.GPU]
+    [MeshGroup.matrix.GPU]
     njobs        = 0
     frequency    = []
     active_CI    = []
@@ -1148,29 +1125,6 @@ filename = "test/DGmethods_old/Euler/isentropic_vortex_standalone_aux.jl"
     use_mpiexec  = []
     mpiranks     = []
 
-[Metrics]
-filename = "test/Mesh/Metrics.jl"
-
-    [Metrics.matrix.CPU]
-    njobs        = 1
-    frequency    = ["continuously"]
-    active_CI    = ["azure"]
-    time_limit   = [""]
-    args         = [""]
-    parallel     = [true]
-    use_mpiexec  = [false]
-    mpiranks     = [3]
-
-    [Metrics.matrix.GPU]
-    njobs        = 0
-    frequency    = []
-    active_CI    = []
-    time_limit   = []
-    args         = []
-    parallel     = []
-    use_mpiexec  = []
-    mpiranks     = []
-
 [mpi_connect_stacked_3d]
 filename = "test/Mesh/mpi_connect_stacked_3d.jl"
 
@@ -1309,29 +1263,6 @@ filename = "test/Mesh/interpolation.jl"
     use_mpiexec  = [true]
     mpiranks     = [3]
 
-[filter]
-filename = "test/Mesh/filter.jl"
-
-    [filter.matrix.CPU]
-    njobs        = 1
-    frequency    = ["continuously"]
-    active_CI    = ["azure"]
-    time_limit   = [""]
-    args         = [""]
-    parallel     = [true]
-    use_mpiexec  = [false]
-    mpiranks     = [3]
-
-    [filter.matrix.GPU]
-    njobs        = 0
-    frequency    = []
-    active_CI    = []
-    time_limit   = []
-    args         = []
-    parallel     = []
-    use_mpiexec  = []
-    mpiranks     = []
-
 [integral_test_old]
 filename = "test/DGmethods_old/util/integral_test.jl"
 
@@ -1377,29 +1308,6 @@ filename = "examples/DGmethods_old/ex_001_periodic_advection.jl"
     parallel     = [true]
     use_mpiexec  = [true]
     mpiranks     = [3]
-
-[topology]
-filename = "test/Mesh/topology.jl"
-
-    [topology.matrix.CPU]
-    njobs        = 1
-    frequency    = ["continuously"]
-    active_CI    = ["azure"]
-    time_limit   = [""]
-    args         = [""]
-    parallel     = [true]
-    use_mpiexec  = [false]
-    mpiranks     = [3]
-
-    [topology.matrix.GPU]
-    njobs        = 0
-    frequency    = []
-    active_CI    = []
-    time_limit   = []
-    args         = []
-    parallel     = []
-    use_mpiexec  = []
-    mpiranks     = []
 
 [dry_rayleigh_benard]
 filename = "examples/Atmos/dry_rayleigh_benard.jl"
@@ -1461,29 +1369,6 @@ filename = "test/Utilities/ParametersType/runtests.jl"
     mpiranks     = [3]
 
     [ParametersType.matrix.GPU]
-    njobs        = 0
-    frequency    = []
-    active_CI    = []
-    time_limit   = []
-    args         = []
-    parallel     = []
-    use_mpiexec  = []
-    mpiranks     = []
-
-[grid_integral]
-filename = "test/Mesh/grid_integral.jl"
-
-    [grid_integral.matrix.CPU]
-    njobs        = 1
-    frequency    = ["continuously"]
-    active_CI    = ["azure"]
-    time_limit   = [""]
-    args         = [""]
-    parallel     = [true]
-    use_mpiexec  = [false]
-    mpiranks     = [3]
-
-    [grid_integral.matrix.GPU]
     njobs        = 0
     frequency    = []
     active_CI    = []
@@ -1944,29 +1829,6 @@ filename = "test/DGmethods_old/Euler/isentropic_vortex_standalone_bc.jl"
     mpiranks     = [1             , 3]
 
     [isentropic_vortex_standalone_bc_old.matrix.GPU]
-    njobs        = 0
-    frequency    = []
-    active_CI    = []
-    time_limit   = []
-    args         = []
-    parallel     = []
-    use_mpiexec  = []
-    mpiranks     = []
-
-[Elements]
-filename = "test/Mesh/Elements.jl"
-
-    [Elements.matrix.CPU]
-    njobs        = 1
-    frequency    = ["continuously"]
-    active_CI    = ["azure"]
-    time_limit   = [""]
-    args         = [""]
-    parallel     = [true]
-    use_mpiexec  = [false]
-    mpiranks     = [3]
-
-    [Elements.matrix.GPU]
     njobs        = 0
     frequency    = []
     active_CI    = []
