--- a/.buildkite/docs-pipeline.yml
+++ b/.buildkite/docs-pipeline.yml
@@ -5,6 +5,7 @@ steps:
   - label: "Build docs"
     command:
       - "mkdir -p $$JULIA_DEPOT_PATH" 
+      - "export JULIA_MPI_BINARY=\"\""
       - "export SINGULARITY_BIND=\"$$JULIA_DEPOT_PATH:/data\""
       - "singularity pull $$SINGULARITY_CONTAINER"
       - "singularity run $$SINGULARITY_CONTAINER julia -e 'using Pkg; Pkg.instantiate()'"
@@ -12,7 +13,6 @@ steps:
       - "singularity run $$SINGULARITY_CONTAINER julia --procs=auto docs/make.jl"
     env:
       JULIA_PROJECT: "docs/"
-      JULIA_MPI_BINARY: ""
       CLIMATEMACHINE_SETTINGS_DISABLE_GPU: "true"
       CLIMATEMACHINE_SETTINGS_FIX_RNG_SEED: "true"
       CLIMATEMACHINE_SETTINGS_DISABLE_CUSTOM_LOGGER: "true"
