--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -998,6 +998,16 @@ steps:
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
+  - label: "gpu_cbl_les"
+    key: "gpu_cbl_les"
+    command:
+      - "mpiexec julia --color=yes --project experiments/AtmosLES/convective_bl_les.jl --diagnostics=default --fix-rng-seed"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
   - label: "gpu_bomex_single_stack"
     key: "gpu_bomex_single_stack"
     command:
