--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -518,6 +518,16 @@ steps:
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
+  - label: "gpu_custom_filter"
+    key: "gpu_custom_filter"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/custom_filter.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
   - label: "gpu_remainder_model"
     key: "gpu_remainder_model"
     command:
