--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1029,6 +1029,16 @@ steps:
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
+  - label: "gpu_squall_line"
+    key: "gpu_squall_line"
+    command:
+      - "mpiexec julia --color=yes --project experiments/AtmosLES/squall_line.jl --diagnostics=default --fix-rng-seed"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
   - label: "gpu_sbl_les"
     key: "gpu_sbl_les"
     command:
