--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -94,7 +94,7 @@ steps:
       slurm_ntasks: 3
 
   - label: "cpu_diffusion_hyperdiffusion_sphere"
-    key: "cpu_diffusion_hyperdiffusion_sphere" 
+    key: "cpu_diffusion_hyperdiffusion_sphere"
     command:
       - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/diffusion_hyperdiffusion_sphere.jl"
     agents:
@@ -900,7 +900,7 @@ steps:
       slurm_gres: "gpu:1"
 
   - label: "gpu_diffusion_hyperdiffusion_sphere"
-    key: "gpu_diffusion_hyperdiffusion_sphere" 
+    key: "gpu_diffusion_hyperdiffusion_sphere"
     command:
       - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/diffusion_hyperdiffusion_sphere.jl --integration-testing"
     agents:
@@ -1013,6 +1013,16 @@ steps:
     key: "gpu_dycoms"
     command:
       - "mpiexec julia --color=yes --project experiments/AtmosLES/dycoms.jl --fix-rng-seed"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 3
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_dycoms_with_precip"
+    key: "gpu_dycoms_with_precip"
+    command:
+      - "mpiexec julia --color=yes --project experiments/AtmosLES/dycoms.jl --fix-rng-seed --moisture-model nonequilibrium --precipitation-model rain"
     agents:
       config: gpu
       queue: central
