--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1188,6 +1188,16 @@ steps:
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
+  - label: "gpu_stable_bl_edmf_implicit_test"
+    key: "gpu_stable_bl_edmf_implicit_test"
+    command:
+      - "mpiexec julia --color=yes --project test/Atmos/EDMF/stable_bl_edmf_implicit.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
   - label: "gpu_heat_analytic_unit_test"
     key: "gpu_heat_analytic_unit_test"
     command:
