--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -93,6 +93,15 @@ steps:
       queue: central
       slurm_ntasks: 3
 
+  - label: "cpu_diffusion_hyperdiffusion_sphere"
+    key: "cpu_diffusion_hyperdiffusion_sphere" 
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/diffusion_hyperdiffusion_sphere.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 3
+
   - label: "cpu_mpi_connect_1d"
     key: "cpu_mpi_connect_1d"
     command:
@@ -884,6 +893,16 @@ steps:
     key: "gpu_periodic_3D_hyperdiffusion"
     command:
       - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/periodic_3D_hyperdiffusion.jl --integration-testing"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 3
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_diffusion_hyperdiffusion_sphere"
+    key: "gpu_diffusion_hyperdiffusion_sphere" 
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/diffusion_hyperdiffusion_sphere.jl --integration-testing"
     agents:
       config: gpu
       queue: central
