--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1079,6 +1079,16 @@ steps:
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
+  - label: "gpu_bomex_single_stack_nonequil"
+    key: "gpu_bomex_single_stack_nonequil"
+    command:
+      - "mpiexec julia --color=yes --project experiments/AtmosLES/bomex_single_stack.jl --moisture-model nonequilibrium --diagnostics=default --fix-rng-seed"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
   - label: "gpu_bomex_edmf"
     key: "gpu_bomex_edmf"
     command:
