--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,5 +1,7 @@
 env:
   JULIA_VERSION: "1.5.2"
+  OPENMPI_VERSION: "4.0.4"
+  CUDA_VERSION: "10.2"
   OPENBLAS_NUM_THREADS: 1
   CLIMATEMACHINE_SETTINGS_FIX_RNG_SEED: "true"
 
