--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -33,4 +33,5 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
-julia = ">= 1.3"
+Documenter = ">= 0.25.4"
+julia = "1.4"
