--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -300,6 +300,15 @@ steps:
       queue: central
       slurm_ntasks: 2
 
+  - label: "cpu_fvm_advection"
+    key: "cpu_fvm_advection"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/fvm_advection.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 2
+
   - label: "cpu_gcm_driver_test"
     key: "cpu_gcm_driver_test"
     command:
@@ -673,6 +682,16 @@ steps:
     key: "gpu_advection_sphere"
     command:
       - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/advection_sphere.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 2
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_fvm_advection"
+    key: "gpu_fvm_advection"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/fvm_advection.jl "
     agents:
       config: gpu
       queue: central
