--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1126,6 +1126,16 @@ steps:
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
+  - label: "gpu_cfsite"
+    key: "gpu_cfsite"
+    command:
+      - "mpiexec julia --color=yes --project experiments/AtmosLES/cfsite_hadgem2-a_07_amip.jl --diagnostics=default --fix-rng-seed"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
   - label: "gpu_bomex_single_stack"
     key: "gpu_bomex_single_stack"
     command:
