--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -246,6 +246,15 @@ steps:
       queue: central
       slurm_ntasks: 3
 
+  - label: "cpu_acousticwave_variable_degree"
+    key: "cpu_acousticwave_variable_degree"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/Euler/acousticwave_variable_degree.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 3
+
   - label: "cpu_mms_bc_atmos"
     key: "cpu_mms_bc_atmos"
     command:
@@ -277,6 +286,15 @@ steps:
     key: "cpu_direction_splitting_advection_diffusion"
     command:
       - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/direction_splitting_advection_diffusion.jl --fix-rng-seed"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 3
+
+  - label: "cpu_variable_degree_advection_diffusion"
+    key: "cpu_variable_degree_advection_diffusion"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/variable_degree_advection_diffusion.jl"
     agents:
       config: cpu
       queue: central
@@ -628,6 +646,16 @@ steps:
       slurm_ntasks: 3
       slurm_gres: "gpu:1"
 
+  - label: "gpu_acousticwave_variable_degree"
+    key: "gpu_acousticwave_variable_degree"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/Euler/acousticwave_variable_degree.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 3
+      slurm_gres: "gpu:1"
+
   - label: "gpu_mms_bc_atmos"
     key: "gpu_mms_bc_atmos"
     command:
@@ -662,6 +690,16 @@ steps:
     key: "gpu_direction_splitting_advection_diffusion"
     command:
       - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/direction_splitting_advection_diffusion.jl --fix-rng-seed"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 3
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_variable_degree_advection_diffusion"
+    key: "gpu_variable_degree_advection_diffusion"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/variable_degree_advection_diffusion.jl"
     agents:
       config: gpu
       queue: central
