--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1129,6 +1129,16 @@ steps:
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
+  - label: "gpu_solid_body_rotation_mountain"
+    key: "gpu_solid_body_rotation_mountain"
+    command:
+      - "mpiexec julia --color=yes --project experiments/TestCase/solid_body_rotation_mountain.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
   - label: "gpu_dry_baroclinic_wave"
     key: "gpu_dry_baroclinic_wave"
     command:
