--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1086,20 +1086,40 @@ steps:
       slurm_ntasks: 3
       slurm_gres: "gpu:1"
 
-  - label: "gpu_bomex_les"
-    key: "gpu_bomex_les"
+  - label: "gpu_squall_eq_no_precip"
+    key: "gpu_squall_eq_no_precip"
     command:
-      - "mpiexec julia --color=yes --project experiments/AtmosLES/bomex_les.jl --diagnostics=default --fix-rng-seed"
+      - "mpiexec julia --color=yes --project experiments/AtmosLES/squall_line.jl --fix-rng-seed --sim-time 600 --check-asserts yes --moisture-model equilibrium --precipitation-model noprecipitation"
     agents:
       config: gpu
       queue: central
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
-  - label: "gpu_squall_line"
-    key: "gpu_squall_line"
+  - label: "gpu_squall_eq_rain"
+    key: "gpu_squall_eq_rain"
     command:
-      - "mpiexec julia --color=yes --project experiments/AtmosLES/squall_line.jl --fix-rng-seed --sim-time 120"
+      - "mpiexec julia --color=yes --project experiments/AtmosLES/squall_line.jl --fix-rng-seed --sim-time 600 --check-asserts yes --moisture-model equilibrium --precipitation-model rain"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_squall_neq_rain_snow"
+    key: "gpu_squall_neq_rain_snow"
+    command:
+      - "mpiexec julia --color=yes --project experiments/AtmosLES/squall_line.jl --fix-rng-seed --sim-time 600 --check-asserts yes --moisture-model nonequilibrium --precipitation-model rainsnow"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_bomex_les"
+    key: "gpu_bomex_les"
+    command:
+      - "mpiexec julia --color=yes --project experiments/AtmosLES/bomex_les.jl --diagnostics=default --fix-rng-seed"
     agents:
       config: gpu
       queue: central
