Clean split-explicit model & BC
- change sign of second-order (diffusive) fluxes to be consitent with first-order
  (advective) fluxes sign ; change BC (when applying surface forcing) accordingly.
- simplify second-order flux BC: no need to specify BC on state & aux vars at this level.
- clean up BC (use generic Numerical Flux names instead of "Central...").

simplify

Simplify reading/writing checkpoint files

- since aux vars are not needed for a restart, skip writing & reading them
  in checkpoint files.
- also add back bits to report status of refvals checking (if run as a test).

lower requiremnt for Δη match

Add test for LowStorageRungeKutta3N : simple_dbl_gyre

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1286,6 +1286,16 @@ steps:
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
+  - label: "gpu_simple_dbl_gyre"
+    key: "gpu_simple_dbl_gyre"
+    command:
+      - "mpiexec julia --color=yes --project test/Ocean/SplitExplicit/simple_dbl_gyre.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
   - label: "gpu_discrete_hydrostatic_balance"
     key: "gpu_discrete_hydrostatic_balance"
     command:
