--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -536,6 +536,16 @@ steps:
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
+  - label: "gpu_thermodynamics"
+    key: "gpu_thermodynamics"
+    command:
+      - "mpiexec julia --color=yes --project test/Common/Thermodynamics/runtests_gpu.jl"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
   - label: "gpu_diagnostic_fields_test"
     key: "gpu_diagnostic_fields_test"
     command:
