--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -48,6 +48,15 @@ steps:
       queue: central
       slurm_ntasks: 1
 
+  - label: "cpu_fvm_advection_diffusion_model_1dimex_bjfnks"
+    key: "cpu_fvm_advection_diffusion_model_1dimex_bjfnks"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/fvm_advection_diffusion_model_1dimex_bjfnks.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
   - label: "cpu_pseudo1D_advection_diffusion"
     key: "cpu_pseudo1D_advection_diffusion"
     command:
