--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -264,6 +264,15 @@ steps:
       queue: central
       slurm_ntasks: 3
 
+  - label: "cpu_fvm_balance"
+    key: "cpu_fvm_balance"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/Euler/fvm_balance.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 3
+
   - label: "cpu_mms_bc_atmos"
     key: "cpu_mms_bc_atmos"
     command:
@@ -723,6 +732,16 @@ steps:
     key: "gpu_acousticwave_variable_degree"
     command:
       - "mpiexec julia --color=yes --project test/Numerics/DGMethods/Euler/acousticwave_variable_degree.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 3
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_fvm_balance"
+    key: "gpu_fvm_balance"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/Euler/fvm_balance.jl "
     agents:
       config: gpu
       queue: central
